# sdl2

./: CMakeLists.txt  README.md  build.MinGW Makefiles.cmd  build.cmd
MinGW Makefiles/cmake/: SDL2Targets-noconfig.cmake
MinGW Makefiles/include/SDL2/: SDL_config.h
